tests/call/bool.out
[31merror[error]: 'bool' object is not callable
----- Traceback -----
  ┌─ <unknown>:1:6
  | 
1 | True()
  |       ^
[0m